# contactbook

./: .coveragerc  .env.test  .gitignore  .pylintrc  README.md  pyproject.toml  tasks.py
data/: database.sqlite  testdatabase.sqlite
dokumentaatio/: arkkitehtuuri.md  changelog.md  kayttoohje.md  testaus.md  tuntikirjanpito.md  vaatimusmaarittely.md
laskarit/viikko1/: gitlog.txt  komentorivi.txt
laskarit/viikko2/unicafe/: .coverage
src/: db_connection.py  index.py  initialize_db.py
src/entities/: contact.py  user.py
src/repositories/: contact_repository.py  user_repository.py
src/services/: contact_service.py  user_service.py
src/tests/repositories/: contact_repository_test.py  user_repository_test.py
src/tests/services/: contact_service_test.py  user_service_test.py
src/ui/: contact_form_view.py  contacts_view.py  login_view.py  main.py  register_view.py  ui.py
