[tool.poetry]
name = "contactbook"
version = "0.1.0"
description = ""
authors = ["Venla R <venla.e.rantanen@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
python-dotenv = "^1.0.1"
pytest = "^8.0.0"
invoke = "^2.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
coverage = "^7.4.4"
pylint = "^3.1.0"
autopep8 = "^2.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
